--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
        <thead>
            <tr>
                <th>Dates</th>
-               <th  style="text-align:left">Education</th>
+               <th style="text-align:left">Education</th>
            </tr>
            <tr>
                <td>2019 - 2023</td>
@@ -55,7 +55,7 @@
    <h3>Programming Skills</h3>
     <ul>
         <li>Java ⭐️⭐️⭐️</li>
-        <li>JS ⭐️⭐️</li>
+        <li>JavaScript ⭐️⭐️</li>
         <li>Photography ⭐️⭐️</li>
     </ul>
 
