FourthCommit_External_CSS

--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Contact Me</h1>
     <p>My Fictional Address</p>
     <p>Phone :- 7123213012</p>
-    <p>srivastava2000saurav@gmail.com</p>
-    <hr>
+    <p>srivastava2000saurav@gmail.com</p><br>
+    <hr><br>
     <form action="mailto:srivastava2000saurav@gmail.com" method = "post" enctype="text/plain">
         <label for="Name">Your Name: </label>
         <input type="text" name="yourName" id="Name" placeholder="Your Name Here"><br><br>
