--- a/index.html
+++ b/index.html
@@ -6,17 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
 
-    <style>
-        body {
-            background-color: #EAF6F6;
-        }
-        hr {
-            border-style: dotted none none;
-            border-color: grey;
-            border-width: 5px;
-            width: 5%;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
    <table cellspacing="20">
